RESOLVED FIXED Bug 239399
ASSERTION FAILED: !m_isInitializingSendSource crashes on the bots
https://bugs.webkit.org/show_bug.cgi?id=239399
Summary ASSERTION FAILED: !m_isInitializingSendSource crashes on the bots
Chris Dumez
Reported 2022-04-15 12:45:00 PDT
ASSERTION FAILED: !m_isInitializingSendSource /Volumes/Data/worker/macOS-AppleSilicon-Big-Sur-Debug-Build-EWS/build/Source/WebKit/Platform/IPC/cocoa/ConnectionCocoa.mm(255) : bool IPC::Connection::sendMessage(std::unique_ptr<MachMessage>) 1 0x1417c40b8 WTFCrash 2 0x1047692f0 std::__1::__optional_copy_assign_base<int, true>::__optional_copy_assign_base() 3 0x105238a18 IPC::Connection::sendMessage(std::__1::unique_ptr<IPC::MachMessage, std::__1::default_delete<IPC::MachMessage> >) 4 0x105239750 IPC::Connection::sendOutgoingMessage(WTF::UniqueRef<IPC::Encoder>&&) 5 0x105d1f264 IPC::Connection::sendOutgoingMessages() 6 0x105d3c2ec IPC::Connection::sendMessage(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption>, std::__1::optional<WTF::Thread::QOS>)::$_2::operator()() 7 0x105d3c238 WTF::Detail::CallableWrapper<IPC::Connection::sendMessage(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption>, std::__1::optional<WTF::Thread::QOS>)::$_2, void>::call() 8 0x1417ef884 WTF::Function<void ()>::operator()() const 9 0x1419323cc WTF::(anonymous namespace)::DispatchWorkItem::operator()() 10 0x1419303bc void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(void*) 11 0x19f0b3ec0 _dispatch_client_callout 12 0x19f0bb6a8 _dispatch_lane_serial_drain 13 0x19f0bc2a4 _dispatch_lane_invoke 14 0x19f0c6b74 _dispatch_workloop_worker_thread 15 0x19f25f89c _pthread_wqthread 16 0x19f25e5d4 start_wqthread frequently seen on the EWS bots, e.g. https://ews-build.s3-us-west-2.amazonaws.com/macOS-AppleSilicon-Big-Sur-Debug-WK2-Tests-EWS/457653-28957/results.html
Attachments
Patch (4.06 KB, patch)
2022-04-19 07:05 PDT, Kimmo Kinnunen
no flags
Patch (4.04 KB, patch)
2022-04-19 07:10 PDT, Kimmo Kinnunen
no flags
Radar WebKit Bug Importer
Comment 1 2022-04-15 12:58:21 PDT
Simon Fraser (smfr)
Comment 2 2022-04-15 19:03:13 PDT
Also: ASSERTION FAILED: !m_pendingOutgoingMachMessage && !m_isInitializingSendSource /Volumes/Data/worker/macOS-AppleSilicon-Big-Sur-Debug-Build-EWS/build/Source/WebKit/Platform/IPC/cocoa/ConnectionCocoa.mm(289) : bool IPC::Connection::sendOutgoingMessage(UniqueRef<IPC::Encoder> &&) 1 0x13da707f8 WTFCrash 2 0x1009f86a0 std::__1::__optional_copy_assign_base<int, true>::__optional_copy_assign_base() 3 0x1014c751c IPC::Connection::sendOutgoingMessage(WTF::UniqueRef<IPC::Encoder>&&) 4 0x101fad5a8 IPC::Connection::sendOutgoingMessages() 5 0x101fca630 IPC::Connection::sendMessage(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption>, std::__1::optional<WTF::Thread::QOS>)::$_2::operator()() 6 0x101fca57c WTF::Detail::CallableWrapper<IPC::Connection::sendMessage(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption>, std::__1::optional<WTF::Thread::QOS>)::$_2, void>::call() 7 0x13da9c1c8 WTF::Function<void ()>::operator()() const 8 0x13dbde9d8 WTF::(anonymous namespace)::DispatchWorkItem::operator()() 9 0x13dbdc9c8 void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(void*) 10 0x19928bec0 _dispatch_client_callout 11 0x1992936a8 _dispatch_lane_serial_drain 12 0x1992942a4 _dispatch_lane_invoke 13 0x19929eb74 _dispatch_workloop_worker_thread 14 0x19943789c _pthread_wqthread 15 0x1994365d4 start_wqthread LEAK: 1 WebPageProxy
Kimmo Kinnunen
Comment 4 2022-04-19 07:05:51 PDT
Kimmo Kinnunen
Comment 5 2022-04-19 07:10:25 PDT
Kimmo Kinnunen
Comment 6 2022-04-19 07:12:38 PDT
*** Bug 238663 has been marked as a duplicate of this bug. ***
Kimmo Kinnunen
Comment 7 2022-04-19 09:17:12 PDT
Thanks for filing, sorry for the trouble.
EWS
Comment 8 2022-04-19 13:34:17 PDT
Committed r293035 (249774@main): <https://commits.webkit.org/249774@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457888 [details].
Kimmo Kinnunen
Comment 9 2022-04-20 12:03:48 PDT
*** Bug 239496 has been marked as a duplicate of this bug. ***
Fujii Hironori
Comment 10 2022-04-20 23:44:59 PDT
*** Bug 239488 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.